--- a/ueventd.e0.rc
+++ b/ueventd.e0.rc
@@ -179,3 +179,4 @@
 ## GPS
 /dev/oncrpc/00000000:0    0660  system       qcom_oncrpc
 /dev/oncrpc/3000008c:00050000 0660   system       qcom_oncrpc
+/dev/graphics/fb0  0660  system camera
