Validate bootmode when starting charger

--- a/init.e0.rc
+++ b/init.e0.rc
@@ -270,3 +270,6 @@ service charger /charger
     user root
     group root
     oneshot
+
+on property:init.svc.charger=running
+    exec /system/bin/chgchk
